# Basic-Inventory-Record-Management-System-Application-

COS3711_A3_StoreApplication/: CMakeLists.txt  book.cpp  book.h  checkdataform.cpp  checkdataform.h  customer.cpp  customer.h  customerform.cpp  customerform.h  itemlistmemento.cpp  itemlistmemento.h  magazine.cpp  magazine.h  main.cpp  shopmainwindow.cpp  shopmainwindow.h  shoptransactionserializer.cpp  shoptransactionserializer.h  shoptreemodelview.cpp  shoptreemodelview.h  transaction.cpp  transaction.h  transactionfactory.cpp  transactionfactory.h  transactionlisttoxml.cpp  transactionlisttoxml.h
COS3711_A3_UDPReceiverApplication/: CMakeLists.txt  main.cpp  udpreceivermainwindow.cpp  udpreceivermainwindow.h
